--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a{
   width: 65px;
   height: 65px;
   border-radius: 50%;
-  background: radial-gradient(50% 50% at 69.48% 64%,#179021 0%, #0c780c 100%);
+  background: radial-gradient(50% 50% at 69.48% 64%, #ff906b 0%, #ff5d27 100%);
 }
 .items
 {
@@ -173,12 +173,127 @@ a{
   float: right;
 }
 #btnhome
-{
-  font-size: large;
-  align-items: center;
-  text-align:center;
+{ background-color: #ffffff;
+  color: #0c780c;
+  border-radius: 30px;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: 2px solid #4CAF50;
+}
+#btnhome:hover{
+  background-color: #4CAF50;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+
 }
 .container-1{
   height: 100em;
-  background-color: #000;
+  background-color: #ffffff;
+}
+.box{
+  width: 380px;
+  height: 500px;
+  background-color:rgba(0, 0, 0, 0.7);
+  padding: 20px;
+  margin: 8% auto 0;
+  text-align: center;
+  position: relative;
+  box-sizing: border-box;
+  flex-direction: column;
+}
+
+.box img{
+width:100px;
+  margin-top:-50px ;
+}
+.content{
+  display: inline-flex;
+  overflow: hidden;
+}
+
+form {
+  position: relative;
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+flex-shrink: 0;
+flex-direction: column;
+transition: right 0.5s;
+}
+
+#errorMsg{
+  color:red;
+  text-align: center;
+  font-size: 12px;
+  padding-bottom: 20px;
+
+}
+.login a{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+
+}
+
+input[type=text], input[type=password], input[type=email]{
+	display:block;
+    position: relative;
+	border: 4px solid #ffffff;
+	padding: 12px;
+    margin-bottom: 15px;
+    width: 100%;
+ 	box-sizing: border-box;
+    font-size: 17px;
+    outline: none;
+}
+
+input[type=text]:hover,  input[type=password]:hover, input[type=email]:hover{
+    border: 4px solid #df80ff;
+
+}
+
+input[type=submit]{
+    display:block;
+    position: relative;
+    border: 3px solid #df80ff;
+    padding: 12px;
+    margin-bottom: 20px;
+    width: 100%;
+    border-radius: 25px;
+    background-color:#600080 ;
+    text-align:center;
+    font-size: 20px;
+    color: #ffffff;
+	cursor:pointer;
+    outline: none;
+}
+	
+input[type=submit]:hover{
+	 background-color:#ffffff;
+     color: #000000;
+     font-weight: bold;
+}
+input[type=checkbox]{
+    background-color:#df80ff;
+}
+#check{
+    margin-top: 10px;
+    text-align: left;
+    color: #ffffff;
+    font-size: 15px;
+}
+.bodyform
+{ margin: 0;
+  padding: 0;
+  background-image: url("assets/bghome.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
